--- a/GameProject/GameProject.vcxproj.filters
+++ b/GameProject/GameProject.vcxproj.filters
@@ -17,6 +17,9 @@
     <ClCompile Include="src\Figures\Triangle.cpp">
       <Filter>Figures</Filter>
     </ClCompile>
+    <ClCompile Include="src\Figures\Ellipse.cpp">
+      <Filter>Figures</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\pch.h" />
@@ -30,6 +33,9 @@
       <Filter>Figures</Filter>
     </ClInclude>
     <ClInclude Include="src\Figures\Triangle.h">
+      <Filter>Figures</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Figures\Ellipse.h">
       <Filter>Figures</Filter>
     </ClInclude>
   </ItemGroup>
