--- a/GameProject/GameProject.vcxproj
+++ b/GameProject/GameProject.vcxproj
@@ -35,6 +35,7 @@
       </PrecompiledHeaderFile>
     </ClCompile>
     <ClCompile Include="src\Player\Player.cpp" />
+    <ClCompile Include="src\Shot\Shot.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Application\Window.h" />
@@ -45,6 +46,7 @@
     <ClInclude Include="src\GameMath\Color.h" />
     <ClInclude Include="src\pch.h" />
     <ClInclude Include="src\Player\Player.h" />
+    <ClInclude Include="src\Shot\Shot.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
